# rust-playground

./: .gitignore  LICENSE
helloworld_01/: Cargo.toml
helloworld_01/src/: main.rs
lesson-02/: Cargo.toml
lesson-02/src/: main.rs
lesson-03/: Cargo.toml
lesson-03/src/: main.rs
lesson-05/: Cargo.toml
lesson-05/src/: csv_wrapper.rs  hw.txt  main.rs
lesson-06/: Cargo.toml
lesson-06/src/: main.rs
lesson-07/: Cargo.toml
lesson-07/learn/: main.rs  threads.rs
lesson-07/src/: csv_wrapper.rs  dummy.csv  hw.txt  input_handler.rs  main.rs  main_multi.rs
lesson-08/: Cargo.toml
lesson-08/src/: hello.txt  hellob.txt  main.rs
lesson-09/: Cargo.toml  Cargo.toml.old
lesson-09/client/: Cargo.toml
lesson-09/notes/: main.rs  notes.txt
lesson-09/server/: Cargo.toml
lesson-10/: Cargo.toml  notes.txt
lesson-10/src/: main.rs
lesson-11/: notes.txt
lesson-11/server/: Cargo.toml
lesson-12/: Cargo.toml
lesson-12/src/: lifetimes.rs  lifetimes2.rs  ownership.rs  references.rs  smartpointe.rs
lesson-13/: Cargo.toml
lesson-13-hw/: Cargo.toml
lesson-13-hw/client/: Cargo.toml
lesson-13-hw/files/: dummy.txt
lesson-13/src/: main.rs  practices.rs  simpleerror.rs  ufcs.rs
lesson-14/: Cargo.toml
lesson-14/src/: async0.rs  async1.rs  async2.rs  async3.rs  async4.rs  async5.rs  async6_traits.rs  async7_fut.rs  async8_fut.rs  main.rs  (+2 more)
lesson-15/: Cargo.toml
lesson-15-playground/: .env  Cargo.toml  README.md
lesson-15/src/: databases.rs  main.rs  sqlx.rs  tbd.rs  tokio0.rs  tokio1.rs  tokio2.rs  tokio_file.rs  tokio_http.rs  tokio_mpsc.rs  tokio_rw.rs  tokio_select.rs
lesson-16/: README.md  Rocket.toml  local.db
lesson-16/client/: Cargo.toml
lesson-16/client/src/: input_handler.rs  main.rs  main_multi.rs
lesson-16/server/: Cargo.toml
lesson-16/server/src/: db_client.rs  main.rs  webapp.rs
lesson-16/server/static/: index.html
lesson-16/webapp/: Cargo.toml
lesson-16/webapp/src/: main.rs
lesson-16/webapp/static/: index.html  script.js
lesson-16/webapp/templates/: index.hbs
lesson-17/: .env  Cargo.toml  local.db  run.txt
lesson-18/: README.md  Rocket.toml  docker-compose.yml  local.db  prometheus.yml
(+34 files in other folders)
