[package]
name = "lesson-15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
sqlx = { version = "0.7.3", features = ["sqlite", "postgres"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-macros = "2.2.0"
