[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
flume = "0.11.0"
library = { path = "../library" }
log = "0.4.20"
rocket = "0.5.0"
simple_logger = "4.3.0"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }


[[bench]]
name = "clientbench"
harness = false
