[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "4.3.0"
library = { path = "../library" }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
log = "0.4.20"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "tls-rustls", "sqlx-macros", "uuid"] }
sqlx-cli = "0.7.3"
dotenvy = "0.15.7"
async-stream = "0.3.5"
futures-util = "0.3.29"
rocket = "0.5.0"
lazy_static = "1.4.0"
