[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
library = { path = "../library" }
sqlx = "0.7.3"
dotenvy = "0.15.7"
simple_logger = "4.3.0"
rocket_dyn_templates = {version = "0.1", features = ["handlebars"]  }
serde = { version = "1.0.192", features = ["derive"] }
handlebars =  { version = "4.5.0", features = ["dir_source"] }
serde_json = "1.0.108"
